--- a/Front/final-project/src/app/views/app/home/home.component.html
+++ b/Front/final-project/src/app/views/app/home/home.component.html
@@ -142,7 +142,7 @@
     </div>
 </section>
 <section id="featured-products" class="pb-5">
-    <app-products-slider-container [title]=" 'Featured Products' "></app-products-slider-container>
+    <app-products-slider-container [featured]="true" [title]=" 'Seçilən Məhsullar' "></app-products-slider-container>
 </section>
 <section id="small-banner">
     <div class="container">
@@ -182,7 +182,7 @@
     </div>
 </section>
 <section id="top-selling-roducts" class="pb-5">
-    <app-products-slider-container [title]="'Top Selling Products'"></app-products-slider-container>
+    <app-products-slider-container [topSell]="true" [title]="'Çox Satılan Məhsullar'"></app-products-slider-container>
 </section>
 <app-top-brands-container></app-top-brands-container>
 <section id="blog">
