--- a/Admin/admin/src/app/views/app/product/create-product/create-product.component.html
+++ b/Admin/admin/src/app/views/app/product/create-product/create-product.component.html
@@ -89,8 +89,7 @@
 
         <div class="form-group mt-4">
             <label for="files" type="button" class="btn btn-secondary mr-2">Şəkil yüklə</label>
-            <label [ngClass]="{ 'is-invalid': submitted && f.addedBy.errors }"> <span
-                    class="text-danger">*</span></label>
+            <label> <span class="text-danger">*</span></label>
             <input id="files" (change)="upload($event)" type="file" class="d-none" accept="image/*">
 
             <div *ngIf="uploadImg.length>0" class="photos">
@@ -107,11 +106,8 @@
                     </a>
                 </div>
             </div>
-            <div *ngIf="submitted && f.addedBy.errors" class="text-danger">
-                <div *ngIf="f.addedBy.errors.required">Şəkil boş ola bilməz</div>
-            </div>
         </div>
-
+        <!-- 
         <div class="form-group">
             <label [ngClass]="{ 'is-invalid': submitted && f.addedBy.errors }">Adınız <span
                     class="text-danger">*</span></label>
@@ -120,7 +116,7 @@
                 <div *ngIf="f.addedBy.errors.required">Adınız boş ola bilməz</div>
                 <div *ngIf="f.addedBy.errors.maxLenght">Adınız maksimum 100 xarakter olmalıdır</div>
             </div>
-        </div>
+        </div> -->
         <button type="submit" class="btn btn-success w-100">Yarat</button>
     </form>
 </div>
