--- a/Front/final-project/src/app/shared/containers/new-arrivals-container/new-arrivals-container.component.html
+++ b/Front/final-project/src/app/shared/containers/new-arrivals-container/new-arrivals-container.component.html
@@ -3,88 +3,52 @@
         <div class="row">
             <div class="col-lg-6">
                 <h4 class="main-title">
-                    New Arrivals
+                    Yeni Gələnlər
                 </h4>
             </div>
             <div class="col-lg-6">
                 <ul class=" tab-buttons nav" id="myTab" role="tablist">
                     <li class="nav-item" role="presentation">
                         <a class="active" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab"
-                            aria-selected="true">Footwear</a>
+                            aria-selected="true">Telefonlar</a>
                     </li>
                     <li class="nav-item" role="presentation">
                         <a data-bs-toggle="tab" data-bs-target="#tab2" type="button" role="tab"
-                            aria-selected="false">Footwear</a>
+                            aria-selected="false">Kompüterlər</a>
                     </li>
                     <li class="nav-item" role="presentation">
                         <a data-bs-toggle="tab" data-bs-target="#tab3" type="button" role="tab"
-                            aria-selected="false">Footwear</a>
+                            aria-selected="false">Televizorlar</a>
                     </li>
                     <li class="nav-item" role="presentation">
                         <a data-bs-toggle="tab" data-bs-target="#tab4" type="button" role="tab"
-                            aria-selected="false">Footwear</a>
+                            aria-selected="false">Məişət Texnikası</a>
                     </li>
                 </ul>
             </div>
             <div class="tab-content" id="myTabContent">
                 <div class="tab-pane fade show active" id="tab1" role="tabpanel">
                     <owl-carousel-o [options]="options">
-                        <ng-template carouselSlide>
-                            <app-single-product></app-single-product>
-                        </ng-template>
-                        <ng-template carouselSlide>
-                            <app-single-product></app-single-product>
-                        </ng-template>
-                        <ng-template carouselSlide>
-                            <app-single-product></app-single-product>
-                        </ng-template>
-                        <ng-template carouselSlide>
-                            <app-single-product></app-single-product>
-                        </ng-template>
-                        <ng-template carouselSlide>
-                            <app-single-product></app-single-product>
+                        <ng-template carouselSlide *ngFor="let phone of phones">
+                            <app-single-product [product]="phone"></app-single-product>
                         </ng-template>
                     </owl-carousel-o>
                 </div>
                 <div class="tab-pane fade" id="tab2" role="tabpanel">
                     <owl-carousel-o [options]="options">
-                        <ng-template carouselSlide>
-                            <app-single-product></app-single-product>
-                        </ng-template>
-                        <ng-template carouselSlide>
-                            <app-single-product></app-single-product>
-                        </ng-template>
-                        <ng-template carouselSlide>
-                            <app-single-product></app-single-product>
-                        </ng-template>
-                        <ng-template carouselSlide>
-                            <app-single-product></app-single-product>
-                        </ng-template>
-                        <ng-template carouselSlide>
-                            <app-single-product></app-single-product>
+                        <ng-template carouselSlide *ngFor="let laptop of laptops">
+                            <app-single-product [product]="laptop"></app-single-product>
                         </ng-template>
                     </owl-carousel-o>
                 </div>
                 <div class="tab-pane fade" id="tab3" role="tabpanel">
                     <owl-carousel-o [options]="options">
-                        <ng-template carouselSlide>
-                            <app-single-product></app-single-product>
-                        </ng-template>
-                        <ng-template carouselSlide>
-                            <app-single-product></app-single-product>
-                        </ng-template>
-                        <ng-template carouselSlide>
-                            <app-single-product></app-single-product>
-                        </ng-template>
-                        <ng-template carouselSlide>
-                            <app-single-product></app-single-product>
-                        </ng-template>
-                        <ng-template carouselSlide>
-                            <app-single-product></app-single-product>
+                        <ng-template carouselSlide *ngFor="let tv of tvs">
+                            <app-single-product [product]="tv"></app-single-product>
                         </ng-template>
                     </owl-carousel-o>
                 </div>
-                <div class="tab-pane fade" id="tab4" role="tabpanel">
+                <!-- <div class="tab-pane fade" id="tab4" role="tabpanel">
                     <owl-carousel-o [options]="options">
                         <ng-template carouselSlide>
                             <app-single-product></app-single-product>
@@ -102,7 +66,7 @@
                             <app-single-product></app-single-product>
                         </ng-template>
                     </owl-carousel-o>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
