Shop collection admin panel CRUD finished

--- a/Admin/admin/src/app/shared/containers/layout/sidebar/sidebar.component.html
+++ b/Admin/admin/src/app/shared/containers/layout/sidebar/sidebar.component.html
@@ -39,6 +39,7 @@
                 <a class="collapse-item" [routerLink]="['/app/department']">Şöbə</a>
                 <a class="collapse-item" [routerLink]="['/app/category']">Kateqoriya</a>
                 <a class="collapse-item" [routerLink]="['/app/product']">Məhsul</a>
+                <a class="collapse-item" [routerLink]="['/app/shop-collection']">Kolleksiya</a>
             </div>
         </div>
     </li>
