--- a/Front/final-project/src/assets/scss/_tools.scss
+++ b/Front/final-project/src/assets/scss/_tools.scss
@@ -48,6 +48,9 @@ a {
     color: #f1f1f1 !important;
   }
 }
+.mw-200 {
+  max-width: 200px !important;
+}
 //responsive
 @media only screen and (min-width: 1400px) {
   .container {
