Brand and DealOfDay CRUD Created

--- a/Admin/admin/src/app/shared/containers/layout/sidebar/sidebar.component.html
+++ b/Admin/admin/src/app/shared/containers/layout/sidebar/sidebar.component.html
@@ -40,6 +40,7 @@
                 <a class="collapse-item" [routerLink]="['/app/category']">Kateqoriya</a>
                 <a class="collapse-item" [routerLink]="['/app/product']">Məhsul</a>
                 <a class="collapse-item" [routerLink]="['/app/shop-collection']">Kolleksiya</a>
+                <a class="collapse-item" [routerLink]="['/app/brand']">Brend</a>
             </div>
         </div>
     </li>
